# libvbscript

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: libvbscript.yml
atl/include/: atlcom.h
include/: libvbscript.h
src/: libvbscript.c  vbscript_test.c  wine.c  wine_mingw.c
wine/dlls/atl/: atl.c
wine/dlls/kernelbase/: locale.c
wine/dlls/oleaut32/: oleaut.c  vartype.c
wine/dlls/scrrun/: dictionary.c  filesystem.c  scrrun.c
wine/dlls/vbscript/: compile.c  global.c  interp.c  lex.c  parse.h  parser.tab.c  parser.tab.h  parser.y  vbdisp.c  vbregexp.c  vbscript.c  vbscript.h  vbscript_main.c
wine/include/: guiddef.h  minwindef.h  winbase.h  windef.h  winnt.h  winternl.h
